--- a/design_report.html
+++ b/design_report.html
@@ -31,7 +31,6 @@
 
   h1 {
     text-align: center;
-    margin-bottom: 8px;
   }
 
   h2 {
@@ -44,10 +43,11 @@
 
   p {
     line-height: 1.65;
+    text-align: justify;
   }
 
   ul {
-    margin-left: 20px;
+    margin-left: 30px;
   }
 
   .section {
@@ -63,7 +63,7 @@
 
   .diagram img {
     max-width: 100%;
-    border-radius: 12px;
+    border-radius: 10px;
     box-shadow: 0 4px 16px rgba(0,0,0,0.15);
   }
 
@@ -83,6 +83,27 @@
     font-weight: bold;
     text-decoration: none;
   }
+
+  /* ===== PRINT / PDF CONTROL ===== */
+  @media print {
+    body {
+      background: white;
+    }
+    .container {
+      box-shadow: none;
+      margin: 0;
+      padding: 20mm;
+    }
+    h2 {
+      page-break-before: always;
+    }
+    .diagram {
+      page-break-inside: avoid;
+    }
+    .section {
+      page-break-inside: avoid;
+    }
+  }
 </style>
 </head>
 
@@ -90,188 +111,187 @@
 <div class="container">
 
 <h1>High Level Design Report</h1>
-<p style="text-align:center;">
-<strong>SimuCrisis – Pandemic Disaster Management Simulation</strong>
-</p>
 
-<!-- 1. INTRODUCTION -->
-<div class="section">
-<h2>1. Introduction</h2>
-
-<h3>1.1 Purpose of the System</h3>
-<p>
-SimuCrisis is a Unity-based pandemic simulation system developed for educational and
-decision-support purposes. The system allows users to analyze how pandemic management
-decisions—such as lockdowns, vaccination strategies, and healthcare capacity adjustments—
-affect virus spread and healthcare system load.
-</p>
-
-<p>
-The system primarily targets policymakers, educators, researchers, and students who wish
-to gain insight into pandemic dynamics in a safe and controlled environment.
-</p>
-
-<h3>1.2 Design Goals</h3>
-<ul>
-  <li>Provide an intuitive visualization of pandemic dynamics</li>
-  <li>Ensure availability on standard desktop hardware</li>
-  <li>Offer real-time feedback for interventions</li>
-  <li>Maintain a modular and extensible architecture</li>
-  <li>Support reproducibility through scenario preservation</li>
-</ul>
-
-<h3>1.3 Definitions, Acronyms, and Abbreviations</h3>
-<ul>
-  <li><strong>SEIR</strong>: Susceptible, Exposed, Infected, Recovered epidemiological model</li>
-  <li><strong>Rt</strong>: Effective reproduction number</li>
-  <li><strong>Scenario</strong>: A saved simulation configuration</li>
-  <li><strong>Intervention</strong>: A policy action applied during a simulation run</li>
-</ul>
-
-<h3>1.4 Overview</h3>
-<p>
-This document presents the high-level architecture of SimuCrisis, including subsystem
-decomposition, control mechanisms, data persistence, and boundary conditions. Diagrams
-are provided to illustrate the overall structure and runtime behavior of the system.
-</p>
-</div>
-
-<!-- 2. CURRENT SOFTWARE ARCHITECTURE -->
-<div class="section">
-<h2>2. Current Software Architecture</h2>
-<p>
-SimuCrisis does not rely on a pre-existing software architecture. The system has been
-designed and implemented from scratch with modularity and incremental development in
-mind.
-</p>
-</div>
-
-<!-- 3. PROPOSED SOFTWARE ARCHITECTURE -->
+<!-- ================= SECTION 3 ================= -->
 <div class="section">
 <h2>3. Proposed Software Architecture</h2>
 
 <h3>3.1 Overview</h3>
 <p>
-The proposed architecture follows a layered and modular design. The Simulation Core
-maintains the epidemiological model state, while additional components handle policies,
-metrics, visualization, and persistence.
+The modular architecture of SimuCrisis allows the Simulation Core to maintain the
+epidemiological model state while broadcasting state snapshots to downstream components.
+User interactions are processed through the User Interface and translated into policy
+updates by the Policy Engine.
+</p>
+<p>
+Time-series indicators such as the effective reproduction number (Rt), infection peaks,
+and healthcare load are computed by the Metrics Collector. The Visualization Engine
+renders charts and heatmaps based on these metrics. Scenario persistence and export
+operations are handled by the Scenario Manager and Report Generator subsystems.
 </p>
 
-<h3>3.2 Subsystem Decomposition</h3>
+<h3>3.2 Subsystem decomposition</h3>
 <ul>
-  <li><strong>UI Layer</strong>: Dashboard, parameter panel, policy panel, scenario comparison</li>
-  <li><strong>Core Layer</strong>: Simulation Core, Policy Engine, Metrics Collector, Visualization Engine</li>
-  <li><strong>Data Layer</strong>: Dataset repository, scenario storage, configuration metadata</li>
+  <li><strong>UI Layer (Unity):</strong> Parameter Panel, Policy Panel, Dashboard (Charts/Heatmap), Scenario Comparison UI</li>
+  <li><strong>Core Layer:</strong> Simulation Core (SEIR Model), Policy Engine, Metrics Collector, Visualization Engine</li>
+  <li><strong>Data Layer:</strong> Scenario Manager, Report Generator</li>
+  <li>Local storage for scenarios, configuration metadata, and historical datasets</li>
 </ul>
 
-<h3>3.3 Hardware / Software Mapping</h3>
+<h3>3.3 Hardware / software mapping</h3>
 <p>
-SimuCrisis is designed to operate on standard desktop computers. The primary technologies
-used include Unity with C#, optional Python tools for analysis, and local file storage.
+The system is designed to operate on a standard desktop computer and does not require
+specialized hardware such as virtual reality devices. The primary implementation
+environment is Unity using the C# programming language.
+</p>
+<p>
+Optional Python tools may be used for offline data analysis or preprocessing, while all
+persistent data is stored locally using structured files.
 </p>
 
-<h3>3.4 Persistent Data Management</h3>
+<h3>3.4 Persistent data management</h3>
 <p>
-The system stores simulation scenarios and run artifacts locally. Stored data includes
-parameter sets, intervention schedules, random seeds, and summary statistics. No personal
-health data is collected or stored.
+SimuCrisis stores simulation scenarios and run artifacts locally. These artifacts include
+selected dataset identifiers, simulation parameters, intervention schedules, random seeds
+used for reproducibility, and summary statistics generated during the simulation.
+</p>
+<p>
+No personal or private health information is stored by the system.
 </p>
 
-<h3>3.5 Access Control and Security</h3>
+<h3>3.5 Access control and security</h3>
 <p>
-The initial release of SimuCrisis does not require user authentication. Scenario files are
-validated before loading to prevent corrupted or incompatible inputs. Future online
-features would require secure access control.
+The system operates locally and does not require user authentication in its initial
+version. Scenario files can be validated prior to loading to prevent corrupted or invalid
+inputs.
+</p>
+<p>
+Future extensions involving online sharing or collaboration would require access
+control mechanisms and secure communication channels.
 </p>
 
-<h3>3.6 Global Software Control</h3>
+<h3>3.6 Global software control</h3>
 <p>
-SimuCrisis follows an event-driven control model. User interactions trigger events that
-update simulation parameters. Each timestep produces a snapshot used for analytics and
-visual updates.
+SimuCrisis follows an event-driven control structure. User actions such as starting,
+pausing, or modifying simulation speed trigger events that update internal parameters.
+</p>
+<p>
+Each simulation timestep generates a snapshot that is used to update metrics and refresh
+visualizations.
 </p>
 
-<h3>3.7 Boundary Conditions</h3>
+<h3>3.7 Boundary conditions</h3>
 <p>
-Performance limitations may occur for very large population sizes or dense spatial models.
-To mitigate this, bounded timestep sizes and parameter validation mechanisms are applied.
+Simulation performance may degrade for very large population sizes or dense spatial
+representations. To mitigate this, the system applies bounded timestep sizes and
+aggregated compartment logic.
+</p>
+<p>
+Parameter validation mechanisms prevent unstable configurations, such as negative
+transition rates or impossible healthcare capacities.
 </p>
 
 <div class="diagram">
-  <img src="images/high_level_architecture.png" alt="High Level Architecture Diagram">
-  <div class="caption">Figure 1 – High Level Architecture Diagram</div>
+  <img src="images/high_level_architecture.png" alt="High-Level Architecture Diagram">
+  <div class="caption">Figure 1 – High-Level Architecture Diagram</div>
 </div>
 </div>
 
-<!-- 4. SUBSYSTEM SERVICES -->
+<!-- ================= SECTION 4 ================= -->
 <div class="section">
 <h2>4. Subsystem Services</h2>
 
 <h3>Simulation Core</h3>
 <p>
-Executes the SEIR model and updates population states at each timestep while ensuring
-numerical stability.
+Executes the SEIR epidemiological model and updates the state of the simulated population
+at each timestep based on current parameters.
 </p>
 
 <h3>Policy Engine</h3>
 <p>
-Manages user-defined interventions and applies validated parameter modifications.
+Applies user-defined interventions such as lockdowns or vaccination strategies and
+adjusts simulation parameters dynamically according to policy schedules.
 </p>
 
 <h3>Metrics Collector</h3>
 <p>
-Computes analytical indicators such as Rt, infection peaks, and healthcare utilization.
+Computes analytical indicators including the effective reproduction number (Rt),
+infection peaks, and healthcare utilization metrics.
 </p>
 
 <h3>Visualization Engine</h3>
 <p>
-Renders real-time charts and spatial heatmaps representing infection dynamics.
+Generates real-time charts and spatial heatmaps to visually represent infection dynamics.
 </p>
 
 <h3>Scenario Manager</h3>
 <p>
-Handles saving, loading, and comparison of simulation scenarios.
+Handles saving, loading, and comparison of simulation scenarios for reproducibility and
+analysis.
 </p>
 
 <h3>Report Generator</h3>
 <p>
-Exports simulation results in PDF and CSV formats for external analysis.
+Exports simulation results in PDF and CSV formats for external reporting and evaluation.
 </p>
 </div>
 
-<!-- 5. DIAGRAMS -->
+<!-- ================= SECTION 5 ================= -->
 <div class="section">
-<h2>5. Diagrams</h2>
+<h2>5. Diagrams (Architecture / Sequence / UML)</h2>
 
+<h3>5.1 High-Level Architecture</h3>
 <div class="diagram">
-  <img src="images/sequence_diagram.png" alt="Sequence Diagram">
-  <div class="caption">Figure 2 – Sequence Diagram (Run + Interventions)</div>
+  <img src="images/high_level_architecture.png">
 </div>
 
+<h3>5.2 Sequence Diagram – Run + Interventions</h3>
 <div class="diagram">
-  <img src="images/class_diagram.png" alt="UML Class Diagram">
-  <div class="caption">Figure 3 – UML Class Diagram (High Level)</div>
+  <img src="images/sequence_diagram.png">
+</div>
+
+<h3>5.3 UML Class Diagram (High-Level)</h3>
+<div class="diagram">
+  <img src="images/class_diagram.png">
 </div>
 </div>
 
-<!-- 6. GLOSSARY -->
+<!-- ================= SECTION 6 ================= -->
 <div class="section">
 <h2>6. Glossary</h2>
-<ul>
-  <li><strong>Heatmap</strong>: Spatial visualization showing infection density</li>
-  <li><strong>Snapshot</strong>: Simulation state captured at a timestep</li>
-  <li><strong>Scenario</strong>: Stored simulation configuration</li>
-</ul>
+
+<p><strong>Heatmap:</strong><br>
+A spatial visualization technique used to represent the intensity or concentration of a
+specific variable across a geographic or simulated space. In SimuCrisis, heatmaps are
+primarily used to display infection density and help users visually identify high-risk or
+heavily affected areas.</p>
+
+<p><strong>Scenario:</strong><br>
+A stored simulation configuration that includes initial conditions, disease parameters,
+and a predefined set of intervention policies. Scenarios allow users to reproduce
+experiments, compare different strategies, and analyze outcomes under consistent starting
+assumptions.</p>
+
+<p><strong>Intervention:</strong><br>
+A user-defined policy action applied during a simulation run to influence disease
+dynamics. Examples include lockdown measures, vaccination strategies, and healthcare
+capacity adjustments. Interventions modify simulation parameters in a controlled manner
+over time.</p>
+
+<p><strong>Snapshot:</strong><br>
+A representation of the complete simulation state captured at a specific timestep.
+Snapshots include population distributions, calculated metrics, and relevant system
+variables, and are used for both real-time visualization and post-simulation analysis.</p>
 </div>
 
-<!-- 7. REFERENCES -->
+<!-- ================= SECTION 7 ================= -->
 <div class="section">
 <h2>7. References</h2>
-<ul>
-  <li>ACM Code of Ethics and Professional Conduct</li>
-  <li>IEEE Software Engineering Code of Ethics</li>
-  <li>WHO and CDC Pandemic Data Repositories</li>
-</ul>
+<p>ACM Code of Ethics and Professional Conduct.</p>
+<p>IEEE Software Engineering Code of Ethics.</p>
+<p>IEEE Code of Ethics.</p>
+<p>World Health Organization (WHO) Pandemic Data Archives.</p>
+<p>Centers for Disease Control and Prevention (CDC) COVID-19 Data Repository.</p>
 </div>
 
 <div class="back">
@@ -281,4 +301,3 @@ Exports simulation results in PDF and CSV formats for external analysis.
 </div>
 </body>
 </html>
-
