--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
     <!-- FOOTER LINK TO REPORTS -->
     <div class="footer">
-      <a class="button-link" href="Specs.html">Open Project Specifications Report</a>
+      <a class="button-link" href="specs.html">Open Project Specifications Report</a>
       <br>
       <a class="button-link" href="analysis_report.html">Open Analysis Report </a>
       <br>
