--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@
 
     <!-- FOOTER LINK TO REPORTS -->
     <div class="footer">
-      <a class="button-link" href="specs.html">Open Project Specifications Report</a>
+      <a class="button-link" href="./specs.html">Open Project Specifications Report</a>
       <br>
-      <a class="button-link" href="analysis_report.html">Open Analysis Report </a>
+      <a class="button-link" href="./analysis_report.html">Open Analysis Report </a>
       <br>
-      <a class="button-link" href="design_report.html">Open High Level Design </a>
+      <a class="button-link" href="./design_report.html">Open High Level Design </a>
     </div>
 
   </div>
